# InventarioMovil

./: main.py  pyproject.toml  requirements.txt  sensor_api.py  setup.py
StockFlow.egg-info/: PKG-INFO  SOURCES.txt
controllers/: __init__.py  controller.py
models/: __init__.py  connection.py  model.py  model_colors.py
views/: __init__.py  ajustes_view.py  almacenes_view.py  control_puerta_view.py  dashboard_view.py  home_view.py  inventario_view.py  login_view.py  perfil_view.py  principal_view.py  register_view.py  reportes_view.py  sensores_view.py
